--- a/Fresher/1.Defination.md
+++ b/Fresher/1.Defination.md
@@ -1,1 +1,23 @@
-## Hello
+### Create a simple project using latest Android Studio. App has Login,Sign Up and Home Screens.
+------
+
+####  Below are the points that you should have to consider while developing it.
+
+- Create a login screen that has two edit fields first is username and password respectively. At end of screen put two button and take a label like Login and SignUp.
+  
+  - You have to validate the email address using regular expression. Email address field would not allow invalidate email.
+  - A password length must be min 6 characters long and it must contains number, character, and sign. You have to use regular expression for validate the password.
+  - Click on Login button will validate the data inserted in two edit fields. If validation fails prompt to user an alert dialog.
+  - If user has entered a valid data then open another screen called Home screens and finish the current login screen.
+  - Another button is Sign Up click on it will open the SignUp screen.
+
+- Create a SignUp Screen that has fields like FirstName, LastName, Email address,Phone number, Password, confirms password and Button create.
+  - Mandatory fields are FirstName,Email Address, Password and confirms Password. Indicate each field with asterisk sign.
+  - Again to validate an email address and password you have to use regular expression.A password length must be min 6 characters long and it must contains number, character, and sign. 
+  - Click on create button would verify the inserted data in each Mandatory field if it is not validate then prompt alert dialog.
+  if inseted data is valid the redirect or open Home screen.
+  
+- Create a Home screen. This screen is mainly open from two places one after creating an account and successfully logged in. Take an intent put user inforamtion in it and send those data to home intent. Hence home screen extract the intent bundle data and display a user name in H2 size inside Textview.
+
+
+  
