Provide an iteration
Provide an iteration

--- a/Fresher/1.Defination.md
+++ b/Fresher/1.Defination.md
@@ -20,4 +20,10 @@
 - Create a Home screen. This screen is mainly open from two places one after creating an account and successfully logged in. Take an intent put user inforamtion in it and send those data to home intent. Hence home screen extract the intent bundle data and display a user name in H2 size inside Textview.
 
 
-  
+### Iteration 1: With Storage options
+-Use a Session Manager for store a user name and password.
+-Validate user name and password while logged in.
+-Store SignUp data into session manager.
+
+### Iteration 2: Add Sign Out option
+- After logged into application in home screen give a option of sign out that will redirect on login screen and next time app will not open home screen.
