--- a/Fresher/2.Defination.md
+++ b/Fresher/2.Defination.md
@@ -1,1 +1,11 @@
-## Hello
+## Develop application that help to our HR manager for fill up and gather the basic information of candidate and save for later purpose use.
+
+You have to develop the basic android application that will open candidate form. A form has numbers of fields such as Full Name, Todays Date, Date of Birth, Address(Permanent), Address(current), Contact Number, Email address, after filling these details next button is enable click on it will ask the background information of candidate.
+
+-In Background information section will ask such as Level, Year, Marks and Name of Institute after complete this form click on next button will redirect on Professional Background.
+
+- In Professional Background fields are Name of company, Designation, Joined Date, Resigned, Reason for leaving then click on save button will open the next screen where candidate can see a preview all details that provided with send button.
+
+-Click on send button will open an alert dialog with message **Thank you for sharing your details** and close the application.
+
+
