--- a/Fresher/2.Defination.md
+++ b/Fresher/2.Defination.md
@@ -1,4 +1,4 @@
-## Develop application that help to our HR manager for fill up and gather the basic information of candidate and save for later purpose use.
+## Develop an application that help to our HR manager for fill up and gather the basic information of candidate and save for later purpose use.
 
 You have to develop the basic android application that will open candidate form. A form has numbers of fields such as Full Name, Todays Date, Date of Birth, Address(Permanent), Address(current), Contact Number, Email address, after filling these details next button is enable click on it will ask the background information of candidate.
 
