update the defination
update the defination

--- a/Fresher/2.Defination.md
+++ b/Fresher/2.Defination.md
@@ -9,3 +9,6 @@ You have to develop the basic android application that will open candidate form.
 -Click on send button will open an alert dialog with message **Thank you for sharing your details** and close the application.
 
 
+**Iteration 2**
+- In previous version we have created a flow of the form in this iteration we would like to use local database for persiste the candidate information in device local db. 
+- We can provide a HR for login screen where HR can logged in and review the profile of a candidate.
