update the readme file
update the readme file

--- a/Experiences/1.Defination.md
+++ b/Experiences/1.Defination.md
@@ -1,1 +1,14 @@
-## Hello
+# Develop the android client application for webstie name https://www.themoviedb.org/?language=en. 
+
+- The movie db is popular movie site that has lots of features.There are thousands of users that are accessing this site. We want to develop and publish a mobile client application to that users, hence they can get the upate of the movies through his mobile phone. 
+
+To develop the application they provide us the open API that we can use by creating an application in their developer portal.
+I have already created the API key and application there, you just have to access it throguh the API. You can find the full documentation of the API here: https://developers.themoviedb.org/4/getting-started/authorization
+
+- The list of API is huge but for this practical we want to develop and push the feature in app in each iteration. For each feature we have particualr cycle accrodingly we'll push the feature into the application. Let's start with our first iteration as below:
+
+**Iteration1**
+
+Before we jump into the application make sure you have correct API key and API read access token then only you could able to request to server inside the application.Please contact me for getting this API key in case if you don't have the KEY.
+
+
