--- a/Experiences/1.Defination.md
+++ b/Experiences/1.Defination.md
@@ -1,4 +1,4 @@
-# Develop the android client application for webstie name https://www.themoviedb.org/?language=en. 
+# Develop the android client application for webstie name https://www.themoviedb.org/
 
 - The movie db is popular movie site that has lots of features.There are thousands of users that are accessing this site. We want to develop and publish a mobile client application to that users, hence they can get the upate of the movies through his mobile phone. 
 
