--- a/Experiences/1.Defination.md
+++ b/Experiences/1.Defination.md
@@ -9,6 +9,13 @@ I have already created the API key and application there, you just have to acces
 
 **Iteration1**
 
-Before we jump into the application make sure you have correct API key and API read access token then only you could able to request to server inside the application.Please contact me for getting this API key in case if you don't have the KEY.
+Before we jump into the application make sure you have correct API key and API read access token then only you could able to request to server inside the application.Please contact me for getting this API key in case if you don't have that KEY.
 
-![Demo](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/device-2018-02-16-105028.png)
+![IN THEATERS](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/home.png)
+
+- You have to design the screen like above screen has two tab first in theaters and upcoming. The first tab will listed all the moives that in theatres. You can referes the documentation here: https://developers.themoviedb.org/3/movies/get-now-playing
+
+- In second tab we have list of upcomming movies. To find the upcoming movie list API is here.
+https://developers.themoviedb.org/3/movies/get-upcoming
+
+![UPCOMMING](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/upcoming.png)
