--- a/Experiences/1.Defination.md
+++ b/Experiences/1.Defination.md
@@ -23,7 +23,8 @@ https://developers.themoviedb.org/3/movies/get-upcoming
 ![UPCOMMING](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/upcoming.png)
 
 
-**Iteration2** Discover 
+**Iteration2** Discover | POPULAR | TOP RATED
+
 - In next iteration we would like to push the movie discover feature. You can find the API documenation below porivded link:
 https://developers.themoviedb.org/3/discover/movie-discover
 
