--- a/Experiences/2.Defination.md
+++ b/Experiences/2.Defination.md
@@ -1,1 +1,19 @@
-## Hello
+
+
+Develop Android Application that streaming the education videos from remote server. You have to develop the mobile application for Android/iOS platforms using either kotlin/java or Swift programming language.
+
+Below are the features that we wanted to implement into this practical application.
+
+1.You have to fetch the video contents from remote location with the help of any Http Client.
+
+2.List out the videos with title and description.
+
+3.Click on that item will redirect on that video details screen.
+
+4.On top of that next screen you have to integrate the video player(like YouTube did). Player should have support of media file such like mp4,m3u8 with auto rendition choose based on network bandwidth.
+
+5.Player should have fully support of customization in teram of user interface.
+
+Below is the endpoint that produce the video content you have to use the endpoint and fetch the content and bind into the list.
+
+http://sixclouds.cn/beta/getvideos
