--- a/Experiences/2.Defination.md
+++ b/Experiences/2.Defination.md
@@ -17,3 +17,8 @@ Below are the features that we wanted to implement into this practical applicati
 Below is the endpoint that produce the video content you have to use the endpoint and fetch the content and bind into the list.
 
 http://sixclouds.cn/beta/getvideos
+
+
+![MENU](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/menu.png)
+
+![IN THEATERS](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/home.png)
