--- a/Experiences/2.Defination.md
+++ b/Experiences/2.Defination.md
@@ -19,6 +19,8 @@ Below is the endpoint that produce the video content you have to use the endpoin
 http://sixclouds.cn/beta/getvideos
 
 
-![MENU](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/menu.png)
+![List of Videos](https://github.com/Bhavdip/PracticalRound/blob/master/Experiences/Screenshot_20180709-094325.png)
 
-![IN THEATERS](https://github.com/Creolestudios/PracticalRound/blob/master/Experiences/home.png)
+![Player](https://github.com/Bhavdip/PracticalRound/blob/master/Experiences/Screenshot_20180709-094504.png)
+
+![player](https://github.com/Bhavdip/PracticalRound/blob/master/Experiences/Screenshot_20180709-094515.png)
